# barebone-webauthn

./: Cargo.toml
extension/: manifest.json
extension/static/: index.html  test.js
src/: auth.rs  main.rs  startup.rs
